--- a/action.yml
+++ b/action.yml
@@ -98,7 +98,7 @@ runs:
         PLANEMO_WORKFLOW_UPLOAD: ${{ inputs.workflow-upload }}
         PLANEMO_WORKFLOW_NAMESPACE: ${{ inputs.workflow-namespace }}
         GITHUB_TOKEN: ${{ inputs.github-token }}
-        SETUP_CVMFS: ${{ input.setup-cvmfs }}
+        SETUP_CVMFS: ${{ inputs.setup-cvmfs }}
         PLANEMO_COMBINE_OUTPUTS: ${{ inputs.combine-outputs }}
         PLANEMO_HTML_REPORT: ${{ inputs.html-report }}
         PLANEMO_MD_REPORT: ${{ inputs.markdown-report }}
