--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -237,6 +237,9 @@ jobs:
     # This job runs on Linux
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
     - uses: actions/download-artifact@v2
       with:
         path: artifacts
