fix skipping linting of last repo
due to missing newline at the end of the repo list file
the while loop skips the last lint.

also extended the test

--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -177,6 +177,11 @@ jobs:
         mode: lint
         repository-list: ${{ needs.setup-ci-tools.outputs.repository-list }}
         tool-list: ${{ needs.setup-ci-tools.outputs.tool-list }}
+    - name: check if all test tools were linted
+      run: |
+        grep tool1 lint_report.txt
+        grep tool2 lint_report.txt
+      
 
   test-tools:
     name: Test testing of tools
