add test for tool lint error

--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -178,10 +178,11 @@ jobs:
         repository-list: ${{ needs.setup-ci-tools.outputs.repository-list }}
         tool-list: ${{ needs.setup-ci-tools.outputs.tool-list }}
     - name: check if all test tools were linted
+      if: ${{ always() }}
       run: |
         grep tool1 lint_report.txt
         grep tool2 lint_report.txt
-      
+        grep "ERROR: Error '404 Client Error:" lint_report.txt
 
   test-tools:
     name: Test testing of tools
