--- a/action.yml
+++ b/action.yml
@@ -62,7 +62,7 @@ inputs:
   github-token:
     description: '(Secret!) Github PAT token. Needed for creating workflow repositories with workflow-upload'
     default: ''
-  planemo-options:
+  additional-planemo-options:
     description: 'Additional options passed to planemo in lint/test mode'
     default: ''
   # inputs that are needed for testing this action
@@ -131,7 +131,7 @@ runs:
         WORKFLOWS: ${{ inputs.workflows }}
         GITHUB_EVENT_NAME_OVERRIDE: ${{ inputs.github-event-name-override }}
         GITHUB_REF_OVERRIDE: ${{ inputs.github-ref-override }}
-        PLANEMO_OPTIONS: ${{ inputs.planemo-option }}
+        ADDITIONAL_PLANEMO_OPTIONS: ${{ inputs.additional-planemo-option }}
 
     # see https://trstringer.com/github-actions-multiline-strings/
     - run: |
