--- a/.github/workflows/tools_update_test_data.yaml
+++ b/.github/workflows/tools_update_test_data.yaml
@@ -36,18 +36,14 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache .cache/pip
+    - name: Cache .cache/pip and .planemo
       uses: actions/cache@v2
-      id: cache-pip
+      id: cache-pip-planemo
       with:
-        path: ~/.cache/pip
-        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
-    - name: Cache .planemo
-      uses: actions/cache@v2
-      id: cache-planemo
-      with:
-        path: ~/.planemo
-        key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ steps.get-galaxy-sha.outputs.galaxy-head-sha }}
+        path: |
+          ~/.cache/pip
+          ~/.planemo
+        key: cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup-pr-tools.outputs.galaxy-head-sha }}
     # Install the `wheel` package so that when installing other packages which
     # are not available as wheels, pip will build a wheel for them, which can be cached.
     - name: Install wheel
@@ -113,12 +109,14 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Cache .cache/pip
+    - name: Cache .cache/pip and .planemo
       uses: actions/cache@v2
-      id: cache-pip
+      id: cache-pip-planemo
       with:
-        path: ~/.cache/pip
-        key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup-pr-tools.outputs.galaxy-head-sha }}
+        path: |
+          ~/.cache/pip
+          ~/.planemo
+        key: cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup-pr-tools.outputs.galaxy-head-sha }}
     - name: Introduce a change on test tool1 and 2
       run: |
         sed -i -e 's/echo test/echo WRONG_TEST_DATA/' test/tools/tool1/tool1.xml
