--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -174,6 +174,8 @@ jobs:
       uses: ./
       with:
         mode: lint
+        report-level: all
+        fail-level: error
         repository-list: ${{ needs.setup-ci-tools.outputs.repository-list }}
         tool-list: ${{ needs.setup-ci-tools.outputs.tool-list }}
       continue-on-error: true
