--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -226,6 +226,7 @@ jobs:
         galaxy-branch: ${{ env.GALAXY_BRANCH }}
         chunk: ${{ matrix.chunk }}
         chunk-count: ${{ needs.setup-ci-tools.outputs.chunk-count }}
+        additional-planemo-options: --simultaneous_uploads --check_uploads_ok
     - uses: actions/upload-artifact@v2
       with:
         name: 'Tool test output ${{ matrix.chunk }}'
