--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -176,13 +176,14 @@ jobs:
         mode: lint
         repository-list: ${{ needs.setup-ci-tools.outputs.repository-list }}
         tool-list: ${{ needs.setup-ci-tools.outputs.tool-list }}
+        additional-planemo-options: --report_level all
       continue-on-error: true
     - name: check if all test tools were linted
       run: |
         grep tool1 lint_report.txt
         grep tool2 lint_report.txt
         grep "ERROR: Error 'HTTPConnectionPool" lint_report.txt
-
+        grep "Applying linter tests... CHECK" lint_report.txt
   test-tools:
     name: Test testing of tools
     needs: [setup-ci-tools]
