support setting GALAXY_SLOTS
this will enable that each Galaxy job started within planemo test
can use more than the default of 1 CPU core

--- a/action.yml
+++ b/action.yml
@@ -65,6 +65,9 @@ inputs:
   additional-planemo-options:
     description: 'Additional options passed to planemo in lint/test mode'
     default: ''
+  galaxy-slots:
+    description: 'Number of cores to be used for Galaxy jobs in planemo test'
+    default: '1'
   # inputs that are needed for testing this action
   # not supposed to be used
   github-event-name-override:
@@ -132,6 +135,7 @@ runs:
         GITHUB_EVENT_NAME_OVERRIDE: ${{ inputs.github-event-name-override }}
         GITHUB_REF_OVERRIDE: ${{ inputs.github-ref-override }}
         ADDITIONAL_PLANEMO_OPTIONS: ${{ inputs.additional-planemo-options }}
+        GALAXY_SLOTS: ${{ inputs.galaxy-slots }}
 
     # see https://trstringer.com/github-actions-multiline-strings/
     - run: |
