--- a/.github/workflows/tools.yaml
+++ b/.github/workflows/tools.yaml
@@ -19,7 +19,7 @@ jobs:
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: ['3.7']
     steps:
     - name: Print github context properties
       run: |
@@ -95,7 +95,7 @@ jobs:
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: ['3.7']
     steps:
     - name: Determine latest commit in the Galaxy repo
       id: get-galaxy-sha
@@ -154,7 +154,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: ['3.7']
     steps:
     - uses: actions/checkout@v3
       with:
@@ -180,6 +180,8 @@ jobs:
         tool-list: ${{ needs.setup-ci-tools.outputs.tool-list }}
         additional-planemo-options: --report_level all
       continue-on-error: true
+
+  
     - name: check if all test tools were linted
       run: |
         grep tool1 lint_report.txt
@@ -194,7 +196,7 @@ jobs:
       fail-fast: false
       matrix:
         chunk: ${{ fromJson(needs.setup-ci-tools.outputs.chunk-list) }}
-        python-version: [3.7]
+        python-version: ['3.7']
     services:
       postgres:
         image: postgres:11
@@ -244,7 +246,7 @@ jobs:
     needs: [setup-ci-tools, test-tools]
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: ['3.7']
     # This job runs on Linux
     runs-on: ubuntu-latest
     steps:
